--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,1 +1,11 @@
 <h2><%= @list.name %></h2>
+
+
+<% @list.bookmarks.each do |bookmark| %>
+  <h3><%=bookmark.movie.title%></h3>
+  <h3><%= bookmark.comment %></h3>
+  <%= link_to "Delete",
+        bookmark_path(bookmark),
+        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+      %>
+<%end %>
