rails watch list

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,3 +1,5 @@
+<%= cl_image_tag("wtesbzoko902m8fghnwa", width: 400, height: 300, crop: :fill) %>
+
 <ul>
   <% @lists.each do |list| %>
     <li><%= list.name %></li>
